# mvstar

./: pyproject.toml
src/mvstar/: copylist.py  dynamic.py  info.py  main.py
tests/: test_all.py
