[project]
name = "mvstar"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "WhiteCapella", email = "whitecapella@naver.com"},
]
dependencies = [
    "pytest>=8.3.2",
    "pandas>=2.2.2",
    "requests>=2.32.3",
    "tqdm>=4.66.5",
]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
